--- a/src/main/resources/templates/contacts.html
+++ b/src/main/resources/templates/contacts.html
@@ -16,8 +16,7 @@
 
         <tr th:each="contact : ${contacts}">
 
-            <td th:text="${contact.firstName}">
-            </td>
+            <td th:text="${contact.firstName}"></td>
             <td th:text="${contact.name}"></td>
             <td>
                 <a href="index.html" th:href="@{/contact/{id}(id=${contact.id})}">Link</a>
